--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Run security audit
         run: npm audit --audit-level=high
 
+      - name: Run TypeScript type check
+        run: npx tsc --noEmit
+
       - name: Run ESLint
         run: npm run lint
 
